--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,16 +1,9 @@
 on: push
 name: Docker build
 jobs:
-  check_not_deleted:
-    name: Ensure branch is not deleted
-    runs-on: ubuntu-latest
-    steps:
-    - name: If deleted
-      if: 'github.event.deleted'
-      run: exit
   build:
     name: Docker build
-    needs: check_not_deleted
+    if: '!github.event.deleted'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
