Refactor CI and releases

--- a/webhook/Makefile
+++ b/webhook/Makefile
@@ -3,7 +3,7 @@
 NAME=ReviewBot-webhook
 ENTRY_POINT=Handle
 REGION=europe-west1
-RUNTIME=go113
+RUNTIME=$(shell grep '^go ' go.mod  | tr -d ' .')
 
 export GO111MODULE=on
 
