--- a/.github/workflows/release-webhook.yml
+++ b/.github/workflows/release-webhook.yml
@@ -17,8 +17,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: arnested/go-version-action@v1
       id: version
+      with:
+        working-directory: webhook
     - run: echo ::set-output name=go-runtime::$(echo -n go${{ steps.version.outputs.go-mod-version }} | tr -d '.')
-      working-directory: webhook
       id: runtime
     - uses: google-github-actions/auth@v0
       with:
