--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
-on: push
 name: Build and test
+
+on:
+  push:
+    paths:
+      - 'webhook/**'
+      - '.github/workflows/**'
 
 permissions:
   contents: read
