--- a/webhook/Makefile
+++ b/webhook/Makefile
@@ -3,7 +3,7 @@
 NAME=ReviewBot-webhook
 ENTRY_POINT=Handle
 REGION=europe-west1
-RUNTIME=$(shell grep '^go ' go.mod  | tr -d ' .')
+RUNTIME=$(shell grep '^go ' go.mod | cut -d . -f 1-2 | tr -d ' .')
 
 export GO111MODULE=on
 
@@ -11,7 +11,7 @@ test: *.go
 	go test ./...
 
 deploy: test
-	gcloud functions deploy $(NAME) --entry-point=$(ENTRY_POINT) --runtime=$(RUNTIME) --trigger-http --memory=128M --region=$(REGION)
+	gcloud functions deploy $(NAME)--entry-point=$(ENTRY_POINT) --runtime=$(RUNTIME) --trigger-http --memory=128M --region=$(REGION)
 
 logs:
 	gcloud functions logs read $(NAME) --region=$(REGION) --limit=100
