--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
       id: version
       with:
         working-directory: webhook
-    - name: Setup Go ${{ steps.version.outputs.go-mod-version }}.x
+    - name: Setup Go ${{ steps.version.outputs.go-mod-version }}
       uses: WillAbides/setup-go-faster@v1.14.0
       with:
-        go-version: ${{ steps.version.outputs.go-mod-version }}.x
+        go-version: ${{ steps.version.outputs.go-mod-version }}
         ignore-local: true
     - name: go test
       working-directory: webhook
