--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,3 +1,4 @@
+---
 name: Docker build
 
 on:
@@ -11,8 +12,8 @@ permissions:
 jobs:
   build:
     name: Docker build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
-    - uses: actions/checkout@v6
-    - name: Docker build
-      run: docker build .
+      - uses: actions/checkout@v6
+      - name: Docker build
+        run: docker build .
